--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     Total de shreks curiosos: <span id="total_sk2"> 0</span>
     <div class="burro2" id="burro2"></div>
 
-    Total de shreks SUS: <span id="total_sk3"> 0</span>
+    Total de shreks sUS: <span id="total_sk3"> 0</span>
     <div class="burro3" id="burro3"></div>
 
 </body>
